tests/fixtures/status_after_run_no_wrapper.stderr
Error in tests/fixtures/status_after_run_no_wrapper.sh2:2:5
