tests/fixtures/status_after_run_no_wrapper.sh2
func main() {
    try {
        run("sh", "-c", "exit 9")
    } catch {
        run("true")
    }
    print(status())
    run("echo", "hi")
    print(status())
    exit(0)
}
